--- a/BIT_WIN_WEB/src/main/webapp/com/com0002/index.html
+++ b/BIT_WIN_WEB/src/main/webapp/com/com0002/index.html
@@ -12,7 +12,7 @@
 
     
 
-	    <!-- datepicker 는 jquery 1.7.1 이상 bootstrap 2.0.4 이상 버전이 필요함 -->
+	<!-- datepicker 는 jquery 1.7.1 이상 bootstrap 2.0.4 이상 버전이 필요함 -->
 	<!-- jQuery가 먼저 로드 된 후 datepicker가 로드 되어야함.-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
 	<link rel="stylesheet" href="resources/css/plugin/datepicker/bootstrap-datepicker.css">
@@ -99,7 +99,7 @@
 <div class="container">
   <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="bitcoin-logo6.png" alt="" width="250" height="180">
+      <img class="d-block mx-auto mb-4" src="logo.png" alt="" width="250" height="180">
     </div>
 
     <div class="row g-5">
